test/parser/valid/method_and_field_access/implicit_this_for_fields.java
protected class A {
  public A() {}
  protected int x;
  public int m() {
    return x;
  }
}

