test/parser/bad/_custom/bad_octal_escape.java
public class BadOctalEscape {
    public BadOctalEscape() {}

    public char m() {
        return '\399';
    }
}
